--- a/semester-2/week-5.html
+++ b/semester-2/week-5.html
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>A-I: S1-W13</title>
+    <title>A-I: S2-W5</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <base href="/algorithmic-identities/">
 
     <link rel="icon" href="favicon.png" />
-    <link rel="stylesheet" href="/algorithmic-identities/assets/styles.css">
+    <!--<link rel="stylesheet" href="/algorithmic-identities/assets/styles.css">-->
+    <link rel="stylesheet" href="/assets/styles.css">
 </head>
 
 <body>
@@ -47,8 +48,7 @@
                         <li><a href="semester-1/week-10.html"><strong>W10</strong> : Task-Based Making</a></li>
                         <li><a href="semester-1/week-11.html"><strong>W11</strong> : E-3 - 6</a></li>
                         <li><a href="semester-1/week-12.html"><strong>W12</strong> : P-2</a></li>
-                        <li><a href="semester-1/week-13.html" class="active"><strong>W13</strong> : Cohort
-                                Presentation</a></li>
+                        <li><a href="semester-1/week-13.html"><strong>W13</strong> : Cohort Presentation</a></li>
                         <li><a href="semester-1/week-14.html"><strong>W14</strong> : P-3</a></li>
                         <li><a href="semester-1/week-15.html"><strong>W15</strong> : E-7 & P-4</a></li>
                     </ul>
@@ -65,7 +65,7 @@
                         <li><a href="semester-2/week-2.html"><strong>W2</strong> : E-8</a></li>
                         <li><a href="semester-2/week-3.html"><strong>W3</strong> : P-6 & GDI Interview</a></li>
                         <li><a href="semester-2/week-4.html"><strong>W4</strong> : Exploring Arduino</a></li>
-                        <li><a href="semester-2/week-5.html"><strong>W5</strong> : Exhibit 3D Model</a></li>
+                        <li><a href="semester-2/week-5.html" class="active"><strong>W5</strong> : Exhibit 3D Model</a></li>
                     </ul>
                 </div>
 
@@ -86,124 +86,54 @@
         <main class="right-panel">
 
             <section class="catalogue-sidebar">
-                <h1><strong>Week 13</strong> / Cohort Presentation</h1>
+                <h1><strong>Week 5</strong> / Exhibit 3D Model</h1>
             </section>
 
             <!-- ROW 2 — SPLIT ROW -->
             <section class="exp-row split">
                 <div class="exp-block">
-                    <h3><strong>Overview</strong></h3>
+                    <h3><strong>Situating the Work Within an Algorithmic Exhibition</strong></h3>
                 </div>
 
                 <div class="exp-block">
-                    <p>Cohort Sharing to share a peek at going-ins in on <strong>A-I: Algorithmic Identities</strong>
-                        for <strong>CiD</strong> atelier up till this point. The Overview presentation covers the
-                        context, summary of precedents and body of work, design statement, and next steps for Semester
-                        2.</p>
-                </div>
-            </section>
-
-            <!-- ROW — SPLIT WITH TWO IMAGES -->
-            <section class="exp-row split">
-                <div class="exp-block">
-                    <img src="assets/images/w13-1.JPG" alt="" style="object-fit: cover;">
-                </div>
-                <div class="exp-block">
-                    <img src="assets/images/w13-2.JPG" alt="" style="object-fit: cover;">
-                </div>
-            </section>
-
-            <!-- ROW 2 — SPLIT ROW -->
-            <section class="exp-row split">
-                <div class="exp-block">
-                    <h3><strong>Constructive Feedback</strong></h3>
-                </div>
-
-                <div class="exp-block">
-                    <p>During the cohort sharing, I had the opportunity to share my project with the entire cohort,
-                        and the response was encouraging. Several peers mentioned that my presentation made the topic
-                        much easier to understand — something I had been worried about given how abstract and content
-                        heavy datafication and
-                        algorithmic identities can be. One peer even shared that it was “good I’m doing this project”
-                        because it addresses an important topic that more people should know about.</p>
-                    <p>At the same time, the lecturers offered critical and necessary feedback. They emphasised that
-                        regardless of whether the exhibition is physical or virtual, the guiding statement must be
-                        obvious and consistently reinforced. Participants need to feel like they are entering a system
-                        the moment they step into the exhibition environment; the screen, interface, or space must
-                        immediately communicate that experience. Aesthetic exploration cannot replace conceptual
-                        clarity, the concept has to lead the design. This pushed me to reflect on the gaps in my current
-                        framing.</p>
-                    <p>Overall, the session reassured me that the foundation is strong, but also highlighted the
-                        importance of sharper framing, clearer entry points, and more intentional design decisions as I
-                        move into the next phase.</p>
-                </div>
-            </section>
-
-            <!-- ROW 2 — SPLIT ROW -->
-            <section class="exp-row split">
-                <div class="exp-block">
-                    <h3><strong>Moving Forward</strong></h3>
-                </div>
-
-                <div class="exp-block">
-                    <p>I need to deepen my
-                        understanding of what data systems actually collect, what types of data are rarely collected,
-                        and what data might be considered “useless” from a corporate or algorithmic perspective. This
-                        will help me articulate the stakes of my project more clearly. The lecturers also reminded me
-                        that my concept should be understandable even to a thirteen-year-old, which is a useful
-                        benchmark, it forces me to avoid unnecessary abstraction and ensure that the core message is
-                        immediately graspable.</p>
-                </div>
-            </section>
-
-            <!-- 3 COLUMNS -->
-            <section class="exp-row cols-3" style="margin-bottom: 20px;">
-                <div class="exp-block">
-                    <img src="assets/images/w13-5.jpg">
-                </div>
-                <div class="exp-block">
-                    <img src="assets/images/w13-3.jpg">
-                </div>
-                <div class="exp-block">
-                    <img src="assets/images/w13-6.jpg">
+                    <p>Following earlier consultations, it became clear that the uncertainty in my prototypes stemmed
+                        from the lack of clarity about the final form of work. Instead of continuing to develop isolated
+                        experiments and prototypes, I began envisioning the project as a situated exhibit within a
+                        larger exhibition about <strong>algorithms</strong>. This shift reframed my thinking.</p>
+                    <p>This week, I designed the exhibition floor plan, and created a 3D model of the space in
+                        <strong>Blender</strong>. Modelling the environment allowed me to spatially test how the works
+                        might coexist, how audiences would move through them, and how each installation contributes to a
+                        cohesive narrative about <strong>algorithmic systems</strong>.
+                    </p>
                 </div>
             </section>
 
             <!-- ROW 1 — FULL WIDTH IMAGE (16:9 landscape) -->
             <section class="exp-row full">
-                <a href="https://www.instagram.com/p/CstgUe1SDmZ/?img_index=7&igsh=ZHU2YTk1dTFlYTlm" target="_blank"
-                    style="text-decoration: none; color: inherit;">
-                    <img src="assets/images/w13-4.jpg" alt="">
-                    <figcaption style="font-size: 12px; text-align: left;">
-                        <strong>On the way home, I thought I saw a dead rat</strong><em> Vincent Leow 2023</em>
-                    </figcaption>
-                </a>
+                <img src="/assets/images/media-spectacle.jpg" alt="">
+                <figcaption style="font-size: 12px; text-align: left;"><strong>The Society of the Spectacle</strong><em>
+                        Guy Debord, 1973</em></figcaption>
             </section>
 
-            <!-- ROW 2 — SPLIT ROW -->
-            <section class="exp-row split" style="margin-top: -100px;">
-                <div class="exp-block">
-                    <p>The title itself reads like a fleeting moment, a casual observation that becomes unsettling upon
-                        second thought. The “dead rat” functions as both a literal object and a metaphor for urban
-                        anxieties, decay, and the unnoticed elements that populate Singapore’s hyper-clean visual
-                        landscape.</p>
-                    <p>Leow often uses such motifs to reveal how personal perception interacts with public space. The
-                        artwork captures the tension between what is seen, what is assumed, and what is projected onto
-                        the environment. The ambiguity invites viewers to consider how quickly the mind fills in
-                        meaning, how memory distorts, and how the mundane can suddenly become charged with symbolic
-                        weight.</p>
+            <!-- ROW 3 — IMAGE LEFT / TEXT RIGHT -->
+            <section class="exp-row split">
+                <!-- VIDEO BLOCK -->
+                <div class="exp-block" style="height:420px; overflow:hidden; display:flex; flex-direction:column;">
+
+                    <div style="flex:1; overflow:hidden;">
+                        <img src="/assets/images/s2-w5-exhibit-consult.jpg" class="lightbox-trigger"
+                            style="width:100%; height:100%; object-fit:contain; transform:scale(1.1); cursor:pointer;">
+                    </div>
+
                 </div>
 
                 <div class="exp-block">
-                    <p>A peer pointed this out during feedback and suggested I explore exhibition spaces like this,
-                        liminal zones where people don’t expect “art,” but where meaning can be more sharply felt. Her
-                        comment made me reconsider the spatial possibilities for my own pillar on digital exhibition
-                        design. Instead of defaulting to white-cube or screen-based environments, perhaps the power lies
-                        in contextual placement, showing algorithmic processes in unexpected spaces that heighten their
-                        relevance.</p>
-                    <p>This carpark exhibition becomes a reminder that the space itself can carry conceptual weight. It
-                        prompts me to rethink how my future installations can use location not as a backdrop, but as
-                        part of the narrative.</p>
+                    <h2><strong>Artist or Curator?</strong></h2>
+                    <p>This week's discussion with Andreas fundamentally shifted how I understand my role within the exhibition. The question that surfaced was deceptively simple, yet conceptually loaded. <mark><em><strong>Am I just an artist presenting a singular work, or am I also the curator who is responsible for shaping and framing the entire exhibition?</strong></em></mark>
+                    </p>
+                    <p>At first, I had imagined my project as a standable exhibition. Something immersive, self-contained, and conceptually strong enough to exist on its own. However, I realised it would be more impactful if situated within a larger exhibition themed around algorithms. Algorithms do not operate in isolation; they function within systems. Positioning my work within a broader algorithmic context mirrors this logic.</p>
+                    <p>As the artist, I develop the installations. I envision multiple installations rather than one singular piece. Each installation isolates a specific pillar such as datafication, feedback loops, while collectively forming a cohesive experience about <strong>Algorithmic Identity</strong>.</p>
+                    <p>Designing the floor plan and modelling the 3D space helped me understand how visitors might move through these installations and encounter them sequentially. The exhibition therefore becomes more than a display; it becomes a structured environment where audiences experience how algorithmic systems construct identity.</p>
                 </div>
             </section>
 
@@ -276,7 +206,7 @@
             // Set last week per semester (edit SEM 2 when ready)
             const LAST_WEEK_BY_SEMESTER = {
                 1: 15,
-                2: 15
+                2: 5
             };
             const lastWeek = LAST_WEEK_BY_SEMESTER[semester] ?? 15;
 
@@ -303,7 +233,35 @@
             }
 
         });
+
+        document.addEventListener("DOMContentLoaded", () => {
+            const lightbox = document.getElementById("lightbox");
+            const lightboxImg = document.getElementById("lightbox-img");
+
+            // safety checks
+            if (!lightbox || !lightboxImg) return;
+
+            document.querySelectorAll(".lightbox-trigger").forEach(img => {
+                img.addEventListener("click", () => {
+                    lightboxImg.src = img.getAttribute("src");
+                    lightbox.classList.add("active");
+                    lightbox.setAttribute("aria-hidden", "false");
+                });
+            });
+
+            lightbox.addEventListener("click", () => {
+                lightbox.classList.remove("active");
+                lightboxImg.src = "";
+                lightbox.setAttribute("aria-hidden", "true");
+            });
+        });
+
     </script>
+
+    <div id="lightbox" class="lightbox" aria-hidden="true">
+        <img id="lightbox-img" alt="">
+    </div>
+
 
 </body>
 
