--- a/experiments/experiment-6.html
+++ b/experiments/experiment-6.html
@@ -64,6 +64,7 @@
                         <li><a href="semester-2/week-2.html"><strong>W2</strong> : E-8</a></li>
                         <li><a href="semester-2/week-3.html"><strong>W3</strong> : P-6 & GDI Interview</a></li>
                         <li><a href="semester-2/week-4.html"><strong>W4</strong> : Exploring Arduino</a></li>
+                        <li><a href="semester-2/week-5.html"><strong>W5</strong> : Exhibit 3D Model</a></li>
                     </ul>
                 </div>
                 <div class="nav-group">
