--- a/semester-2/week-2.html
+++ b/semester-2/week-2.html
@@ -62,6 +62,7 @@
                         <li><a href="semester-2/week-2.html" class="active"><strong>W2</strong> : E-8</a></li>
                         <li><a href="semester-2/week-3.html"><strong>W3</strong> : P-6 & GDI Interview</a></li>
                         <li><a href="semester-2/week-4.html"><strong>W4</strong> : Exploring Arduino</a></li>
+                        <li><a href="semester-2/week-5.html"><strong>W5</strong> : Exhibit 3D Model</a></li>
                     </ul>
                 </div>
 
@@ -643,7 +644,7 @@
             // Set last week per semester (edit SEM 2 when ready)
             const LAST_WEEK_BY_SEMESTER = {
                 1: 15,
-                2: 3
+                2: 5
             };
             const lastWeek = LAST_WEEK_BY_SEMESTER[semester] ?? 15;
 
