--- a/semester-2/week-4.html
+++ b/semester-2/week-4.html
@@ -61,8 +61,8 @@
                         <li><a href="semester-2/week-1.html"><strong>W1</strong> : SEM-1 Review</a></li>
                         <li><a href="semester-2/week-2.html"><strong>W2</strong> : E-8</a></li>
                         <li><a href="semester-2/week-3.html"><strong>W3</strong> : P-6 & GDI Interview</a></li>
-                        <li><a href="semester-2/week-4.html" class="active"><strong>W4</strong> : Exploring Arduino</a>
-                        </li>
+                        <li><a href="semester-2/week-4.html" class="active"><strong>W4</strong> : Exploring Arduino</a></li>
+                        <li><a href="semester-2/week-5.html"><strong>W5</strong> : Exhibit 3D Model</a></li>
                     </ul>
                 </div>
 
@@ -706,7 +706,7 @@
             // Set last week per semester (edit SEM 2 when ready)
             const LAST_WEEK_BY_SEMESTER = {
                 1: 15,
-                2: 4
+                2: 5
             };
             const lastWeek = LAST_WEEK_BY_SEMESTER[semester] ?? 15;
 
